RESOLVED FIXED211622
Fix for crashes in LayoutTests in isolated tree mode.
https://bugs.webkit.org/show_bug.cgi?id=211622
Summary Fix for crashes in LayoutTests in isolated tree mode.
Andres Gonzalez
Reported 2020-05-08 05:30:33 PDT
Fix for crashes in LayoutTests in isolated tree mode.
Attachments
Patch (2.39 KB, patch)
2020-05-08 05:35 PDT, Andres Gonzalez
no flags
Andres Gonzalez
Comment 1 2020-05-08 05:35:13 PDT
EWS
Comment 2 2020-05-08 09:17:59 PDT
Committed r261385: <https://trac.webkit.org/changeset/261385> All reviewed patches have been landed. Closing bug and clearing flags on attachment 398855 [details].
Radar WebKit Bug Importer
Comment 3 2020-05-08 09:18:16 PDT
Note You need to log in before you can comment on or make changes to this bug.