Fix for crashes in LayoutTests in isolated tree mode. https://bugs.webkit.org/show_bug.cgi?id=211622

Reviewed by Chris Fleizach.

Several LayoutTests.

Return the root from the isolated tree when it is really ready.
* accessibility/AXObjectCache.cpp:
(WebCore::AXObjectCache::rootObject):

Some code cleanup.
* accessibility/AccessibilityRenderObject.cpp:
(WebCore::AccessibilityRenderObject::clickPoint):


Canonical link: https://commits.webkit.org/224535@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@261385 268f45cc-cd09-0410-ab3c-d52691b4dbfc